Getting scons cross compile to work

--- a/base_external/package/LEDControlSvc/Config.in
+++ b/base_external/package/LEDControlSvc/Config.in
@@ -1,4 +1,5 @@
 config BR2_PACKAGE_LEDCONTROLSVC
 	bool "LEDControlSvc"
+	select HOST_SCONS
 	help
 	  Includes the LED Control Service for lighting addressable LED strings.
