Getting azure to link with our service

--- a/base_external/package/LEDControlSvc/Config.in
+++ b/base_external/package/LEDControlSvc/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_LEDCONTROLSVC
 	bool "LEDControlSvc"
 	select HOST_SCONS
+        select BR2_PACKAGE_AZURE_IOT_SDK_C
 	help
 	  Includes the LED Control Service for lighting addressable LED strings.
