--- a/base_external/configs/aesd_rpi_0w_defconfig
+++ b/base_external/configs/aesd_rpi_0w_defconfig
@@ -17,6 +17,9 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2708-rpi-zero-w"
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
+BR2_PACKAGE_RNG_TOOLS=y
+BR2_PACKAGE_CA_CERTIFICATES=y
+BR2_PACKAGE_NTP=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_TARGET_ROOTFS_EXT2=y
